--- a/css/style.css
+++ b/css/style.css
@@ -21,48 +21,25 @@
 }
 
 
-
-html{
-
-    background-color: var(--color-dark);
-    color: var(--color-dark);
-}
-
 .dmstyle{
+
     font-family: 'DM Sans',sans-serif !important;
+
 }
-
-
 
 .navbarZ{
 
     position: relative;
-    background-color: var(--color-dark);
-    
-
 
 }
-
-/* .section1{
-
-    position: relative;
-
-
-}
-
-.parrafo1{
-
-    position: absolute;
-    z-index: 4;
-
-} */
 
 h1, h2 {
 
     font-size: 260%;
-    letter-spacing: 0.35em; 
+    letter-spacing: 0.3em; 
 
 }
+
 .iFrame2{
 
     position: relative;
@@ -73,26 +50,62 @@ h1, h2 {
     overflow: hidden;
 
 }
-/* .iframe3{
 
-    z-index: 0;
-} */
 a{
+
     text-decoration: none;
+
 }
 
 .main2{
+
     padding: 0;
+
 }
 
 .arteZ{
 
-    margin: 15px;
+    margin: 15px 0;
+    padding-left:15px;
+    padding-right: 0 !important;
+
+}
+
+.carrusel{
+
+    padding: 0;
+    
+}
+
+.artePadding{
+    padding: 0;
+}
+.arteZ{
+
+    padding-left:15px !important;
+
+
 }
 
 .tiendaText{
 
+    padding: 30px;
+    text-align: center;
+
+
+}
+
+.animacionText{
+
     padding: 20px;
+    text-align: center;
+    font-size:3vw
+}
+
+.tiendaText h1{
+    padding-left: 5px;
+    font-size:5vw
+
 }
 
 .tiendaZ{
@@ -103,7 +116,8 @@ a{
 .contactoZ{
 
     text-align: center;
-    margin-top: 30px;
+
+    padding: 30px 0;
 }
 
 .contactoZ1 div{
@@ -112,7 +126,7 @@ a{
 }
 .contactoZ p{
 
-    margin: 50px ;
+    /* margin-bottom: 50px ; */
 
 
 }
@@ -257,8 +271,8 @@ li {
 }
 
 footer{
-
-    background-color: var(--color-dark);
+    
+    /* background-color: var(--color-dark); */
 }
 
 #parrafo{
