--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -6,7 +6,8 @@ $color-magent: #D22BC9;
 $color-amar: #B3D883;
 $color-beige: #D2CBC3;
 $color-azul: #1535e7;
-$color-verde: #36DF63;
-$color-rojo: #fc2a4a;
-$color-rojoalt: #ec8580;
+$color-verde: #3bff6f;
+$color-cyan: #59c2ff;
+$color-rojo: #fc0859;
+$color-rojoalt: #aa2aff;
 
