--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,40 @@
     font-family: 'DM Sans',sans-serif !important;
 
 }
+.banner{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    
+}
+.containerParallax{
 
+    position: absolute;
+    left: -10%;
+
+    width: 120%;
+    height: 100vh;
+
+}
+.containerParallax #scene .layer{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+}
+
+.containerParallax #scene .layer img{
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 h1, h2 {
 
@@ -217,6 +250,12 @@ li {
 
 
     
+}
+@media (max-width: 700px){
+.banner{
+    display: none;
+}
+
 }
 
 
