--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 .banner{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height:100vh;
     overflow: hidden;
     margin-bottom: 40px;
     
@@ -52,7 +52,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .containerParallax #scene .layer img{
@@ -61,7 +61,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
 }
 
@@ -256,9 +256,24 @@ li {
     
 }
 @media (max-width: 700px){
-.banner{
-    display: none;
-}
+    .banner{
+        position: relative;
+        width: 100%;
+        height:100vh;
+        overflow: hidden;
+        margin: -4em 0;
+        
+    }
+    
+    .containerParallax #scene .layer img{
+    
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        object-fit:contain;
+    }
 
 }
 
