mas contenido arte, se arreglo la bio

--- a/base/_mixin.scss
+++ b/base/_mixin.scss
@@ -19,7 +19,7 @@
 
 .mixing2 {
 
-    @include shadowColor(-20px, 0, 25px, $color-beige);
+    @include shadowColor(-20px, 0, 25px, $color-verde);
 
 }
 
