--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@
     font-family: 'DM Sans',sans-serif !important;
 
 }
+
 .banner{
     position: relative;
     width: 100%;
@@ -41,7 +42,6 @@
 
     position: absolute;
     left: -10%;
-
     width: 120%;
     height: 100vh;
 
@@ -52,7 +52,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .containerParallax #scene .layer img{
@@ -68,7 +68,7 @@
 h1, h2 {
 
     font-size: 260%;
-    letter-spacing: 0.3em; 
+    letter-spacing: 0.2em; 
 
 }
 
@@ -105,9 +105,7 @@ a{
 
 }
 
-.artePadding{
-    padding: 0;
-}
+
 .arteZ{
 
     padding-left:15px !important;
@@ -127,7 +125,7 @@ a{
 
     padding: 20px;
     text-align: center;
-    font-size:3vw
+    font-size:2vw
 }
 
 .tiendaText h1{
@@ -164,10 +162,10 @@ a{
 }
 .bioZ{
 
-    text-align:left;
+    text-align:center;
     margin-top: 30px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 
@@ -178,6 +176,11 @@ a{
     height: 100%;
 
 
+}
+
+.iframesText{
+
+    font-size:1.8vw
 }
 
 
@@ -224,6 +227,10 @@ li {
     list-style-type: none
 }
 
+.instDirection{
+
+    text-align: right;
+}
 
 
 #parrafo{
@@ -257,24 +264,41 @@ li {
 }
 @media (max-width: 700px){
     .banner{
-        position: relative;
-        width: 100%;
-        height:100vh;
-        overflow: hidden;
-        margin: -4em 0;
+
+        margin: -8em 0;
         
     }
     
     .containerParallax #scene .layer img{
     
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
+
         object-fit:contain;
     }
 
 }
+
+@media (max-width: 550px){
+    .banner{
+
+        margin: -11em 0;
+        
+    }
+    
+    .containerParallax #scene .layer img{
+    
+
+        object-fit:contain;
+    }
+    .iframesText{
+
+        font-size:3vw
+    }
+    .animacionText{
+        font-size:3vw
+    }
+
+}
+
+
 
 
