--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -5,7 +5,7 @@ $color-dark: #232226;
 $color-magent: #D22BC9;
 $color-amar: #B3D883;
 $color-beige: #D2CBC3;
-$color-azul: #1535e7;
+$color-azul: #2578f5;
 $color-verde: #3bff6f;
 $color-cyan: #59c2ff;
 $color-rojo: #fc0859;
