--- a/base/_variables.scss
+++ b/base/_variables.scss
@@ -9,5 +9,5 @@ $color-azul: #2578f5;
 $color-verde: #3bff6f;
 $color-cyan: #59c2ff;
 $color-rojo: #fc0859;
-$color-rojoalt: #aa2aff;
+$color-rojoalt: #6b1bd4;
 
