--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,18 @@ footer a{
             }
 } 
 
+.buttonZ{
+
+    border: none;
+    outline: none;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0 , 1),
+    15px 15px 15px rgba(0, 0, 0 , 1),
+    20px 20px 15px rgba(0, 0, 0 , 1),
+    30px 30 px 15px rgba(0, 0, 0 , 1),
+    inset 1px  1px 2px #fff;
+}
+
+
 .navbarZ{
 
     position: relative;
@@ -82,7 +94,7 @@ footer a{
     font-size: 1.1em;
     letter-spacing: 0.1em;
     color: transparent;
-    -webkit-text-stroke: .5px rgba(255,255,255,0.7);
+    -webkit-text-stroke: .5px rgba(33, 214, 190, 0.7);
     &::before{
         content: attr(data-text);
         position: absolute;
@@ -99,7 +111,7 @@ footer a{
         filter: drop-shadow(0 0 25px var(--clr));
 
 
-        //color: $color-amar;
+        
             }
 }
 
