--- a/css/style2.css
+++ b/css/style2.css
@@ -86,11 +86,15 @@
   }
 }
 
+footer ul {
+  padding: 0;
+}
 footer a {
   transition: 0.314s;
   color: #6b1bd4;
   text-decoration: none;
   letter-spacing: 0.1em;
+  margin-right: 6px;
 }
 footer a:hover {
   color: #B3D883;
@@ -171,6 +175,18 @@ footer a:hover {
 .arteZ a:hover {
   color: #fc0859;
   text-shadow: 0 0 10px #59c2ff, 0 0 20px #59c2ff, 0 0 40px #59c2ff, 0 0 80px #59c2ff, 0 0 120px #59c2ff, 0 0 160px #59c2ff;
+}
+
+.contactoZ {
+  text-align: center;
+  padding: 30px 0;
+}
+.contactoZ form {
+  text-align: left;
+}
+
+.btnContacto {
+  text-align: center !important;
 }
 
 .tiendaZ .textJoyas {
